<resources
    xmlns:xliff="http://schemas.android.com/apk/res-auto"
    >

    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>
    <string name="action_map_none">No map is available.</string>
    <string name="action_share">Share</string>
    <string name="action_share_none">No way to share.</string>
    <string name="app_name">Sunshine</string>

    <string name="preference_location_default">02138</string>
    <string name="preference_location_key">location</string>
    <string name="preference_location_title">Location</string>

    <string name="preference_units_default">metric</string>
    <string name="preference_units_imperial">Imperial</string>
    <string name="preference_units_key">units</string>
    <string name="preference_units_metric">Metric</string>
    <string name="preference_units_title">Units</string>

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="preference_location_description">
        Define your location here: zip code or city and state.
    </string>

    <!-- Date when displaying today's weather forecast [CHAR LIMIT=20]
    -->
    <string name="today">Today</string>

    <!-- Date when displaying tomorrow's weather forecast [CHAR
         LIMIT=20]
    -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Format for displaying day of week and date (i.e. Mon Jun 1)
         [CHAR LIMIT=20]
    -->
    <string name="format_friendly_date">
        <xliff:g id="day_of_week">%1$s</xliff:g>,
        <xliff:g id="date">%2$s</xliff:g>
    </string>

    <string name="celsius">\u00b0C</string>
    <string name="fahrenheit">\u00b0F</string>
    <string name="format_temperature">
        <xliff:g id="temperature">%1$1.0f</xliff:g><xliff:g id="temperature-unit">%2$s</xliff:g>
    </string>

    <string name="humidity">HUMIDITY</string>
    <string name="format_humidity">%1$s:\u00a0%2$1.0f\u00a0%%</string>

    <string name="wind">WIND</string>
    <string name="wind_kmh">km/H</string>
    <string name="wind_mph">mph</string>
    <string name="format_wind">
        <xliff:g id="wind_label">%1$s</xliff:g>:\u00a0<xliff:g id="wind_value">%2$1.1f</xliff:g>\u00a0<xliff:g id="wind_unit">%3$s</xliff:g>\u00a0<xliff:g id="wind_direction">%4$s</xliff:g>
    </string>

    <string name="pressure">PRESSURE</string>
    <string name="pressure_hpa">hPa</string>
    <string name="pressure_inhg">inHg</string>
    <string name="format_pressure">
        <xliff:g id="pressure_label">%1$s</xliff:g>:\u00a0<xliff:g id="pressure_value">%2$1.1f</xliff:g>\u00a0<xliff:g id="pressure-unit">%3$s</xliff:g>
    </string>

    <string name="direction_north">N</string>
    <string name="direction_north_northeast">NNE</string>
    <string name="direction_northeast">NE</string>
    <string name="direction_east_northeast">ENE</string>
    <string name="direction_east">E</string>
    <string name="direction_east_southeast">ESE</string>
    <string name="direction_southeast">SE</string>
    <string name="direction_south_southeast">SSE</string>
    <string name="direction_south">S</string>
    <string name="direction_south_southwest">SSW</string>
    <string name="direction_southwest">SW</string>
    <string name="direction_west_southwest">WSW</string>
    <string name="direction_west">W</string>
    <string name="direction_west_northwest">WNW</string>
    <string name="direction_northwest">NW</string>
    <string name="direction_north_northwest">NNW</string>

    <string name="say_wind_format">
        The wind is out of the
        <xliff:g id="direction">%1$s</xliff:g>
        direction.
    </string>
    <string name="say_north">north</string>
    <string name="say_north_northeast">north northeast</string>
    <string name="say_northeast">northeast</string>
    <string name="say_east_northeast">east northeast</string>
    <string name="say_east">east</string>
    <string name="say_east_southeast">east southeast</string>
    <string name="say_southeast">southeast</string>
    <string name="say_south_southeast">south southeast</string>
    <string name="say_south">south</string>
    <string name="say_south_southwest">south southwest</string>
    <string name="say_southwest">southwest</string>
    <string name="say_west_southwest">west southwest</string>
    <string name="say_west">west</string>
    <string name="say_west_northwest">west northwest</string>
    <string name="say_northwest">northwest</string>
    <string name="say_north_northwest">north northwest</string>

    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine</string>

    <!-- Notification Format -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g>
        High: <xliff:g id="high">%2$s</xliff:g>
        Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="preference_notify_default">true</string>
    <string name="preference_notify_key">notify</string>
    <string name="preference_notify_last">last_notification</string>
    <string name="preference_notify_summary_off">Do not notify me</string>
    <string name="preference_notify_summary_on">Notify me once a day</string>
    <string name="preference_notify_title">Notifications</string>

</resources>
